imrpove and add new components

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.6",
     "@solidjs/router": "^0.8.3",
+    "solid-icons": "^1.0.12",
     "solid-js": "^1.7.12",
     "solid-start": "^0.3.6",
     "solid-start-bun": "^0.3.6"
